Fix #72: PWA handler